--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,22 @@
     "name": "ZenGPT",
     "version": "0.1.0",
     "description": "Hides ChatGPT responses until they are fully generated.",
+    "action": {
+        "default_title": "ZenGPT",
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icon.png",
+            "32": "icon.png",
+            "48": "icon.png",
+            "128": "icon.png"
+        }
+    },
+    "icons": {
+        "16": "icon.png",
+        "32": "icon.png",
+        "48": "icon.png",
+        "128": "icon.png"
+    },
     "content_scripts": [
         {
             "matches": [
@@ -18,6 +34,9 @@
             "run_at": "document_idle",
             "world": "ISOLATED"
         }
+    ],
+    "permissions": [
+        "storage"
     ],
     "host_permissions": [
         "https://chat.openai.com/*",
